# call-recorder

./: .gitignore  README.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: release.yml
src/: App.css  App.tsx  AudioVisualizer.tsx  index.css  useRecorder.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
