[package]
name = "call-recorder"
version = "0.1.0"
description = "Call Recorder - Tauri App"
authors = ["Lukas"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-all", "dialog-all",
  "fs-read-file",
  "fs-write-file",
  "fs-read-dir",
  "fs-create-dir",
  "fs-exists",
  "notification-all",
  "os-all",
  "path-all",
  "window-close",
  "window-hide",
  "window-show",
  "window-minimize",
  "system-tray"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
